Fix overflowing elements in gallery

--- a/public/sass/thorsen.scss
+++ b/public/sass/thorsen.scss
@@ -367,6 +367,7 @@ li.L1, li.L3, li.L5, li.L7, li.L9 { background: #eee; }
 .gallery {
   list-style: none;
   margin: 0;
+  overflow: hidden;
 
   li {
     background: #f0f0f0;
